[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/Fonts_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/UI/StartMenu.gd" type="Script" id=2]
[ext_resource path="res://resources/AnimatedButton.tres" type="Texture" id=3]
[ext_resource path="res://assets/sprites/UI/buttons/ButtonHover1.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/UI/buttons/Button0.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "intro"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="StartMenu" type="Node2D"]
modulate = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="BackGround" type="ColorRect" parent="."]
margin_right = 512.0
margin_bottom = 300.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="TextureButton" parent="."]
margin_left = 166.0
margin_top = 152.0
margin_right = 346.0
margin_bottom = 191.0
theme = ExtResource( 1 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NewGame"]
modulate = Color( 0.427451, 1, 0.839216, 1 )
margin_left = 23.0
margin_right = 160.0
margin_bottom = 37.0
theme = ExtResource( 1 )
text = "New Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitGame" type="TextureButton" parent="."]
margin_left = 166.0
margin_top = 219.0
margin_right = 346.0
margin_bottom = 259.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="QuitGame"]
modulate = Color( 0.427451, 1, 0.839216, 1 )
margin_left = 18.0
margin_right = 162.0
margin_bottom = 37.0
theme = ExtResource( 1 )
text = "Quit Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/intro = SubResource( 2 )

[connection signal="pressed" from="NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="QuitGame" to="." method="_on_QuitGame_pressed"]
